                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 04-02-2006 added: id attribute to controlgroup, and ControlGroup(group).HasFocus(control) conditional - see online manual for more details.
 - 04-02-2006 added: Zoom effect to skin engine.  See online manual for more details.
 - 04-02-2006 changed: More consistent keymapping in fullscreen views (slideshow,video, visualisation).
 - 04-02-2006 changed: Made Info and CodecInfo global functions - Slideshow now uses CodecInfo rather than Info to display the current file info.
 - 04-02-2006 added: support for sub_load <subtitle> slave command for mplayer.dll
 - 04-02-2006 fixed: cubecodec. echo in .hps, also upped buffer sizes for .adx (should avoid some stuttering).
 - 03-02-2006 added: Better handling of multi-line label controls using <wrapmultiline>.  See online manual for more details.
 - 03-02-2006 fixed: Karaoke Voice Mask settings were not showing correctly.
 - 03-02-2006 fixed: Nicer restart of player from slider controls in the OSD, and more accurate seeking on restart.
 - 02-02-2006 changed: old style sound.xml entries for actions and windows with numbers marked for removal with skin version 2
 - 02-02-2006 added: possibility to load debug symbols for dlls
 - 02-02-2006 fixed: some wmv/asf files wouldn't play either audio or video (updated mplayer.dll)
 - 02-02-2006 changed: OSD is closed when the user selects the DVD Menu.
 - 01-02-2006 fixed: List and Thumb contents were cleared before the WindowClose animation was started.
 - 01-02-2006 added: Rotation effect.  See online manual for more information.
 - 01-02-2006 changed: Generalized the storing of effect information to allow for more possibilities.